--- a/SP2025-Assignment1-jryan/wwwroot/index.html
+++ b/SP2025-Assignment1-jryan/wwwroot/index.html
@@ -1,10 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" 
     <title></title>
 </head>
 <body>
-
+    <div>
+        <h1 id="Title">Reacher</h1>
+        <img id="CoverArt" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FM%2FMV5BYjM1OWI2NmMtOTE4MC00M2ZkLWI2MWYtMTIzZjE3OTBjOThlXkEyXkFqcGdeQXVyMDc5ODIzMw%40%40._V1_FMjpg_UX1000_.jpg&f=1&nofb=1&ipt=4178e61c51f40b1402b859d7af0764f812673e9da782b706219477bdde25b511&ipo=images" width="200" height="250"/>
+        <h5 id="Rating">8.0/10 IMDB Rating</h5>
+        <iframe id="Trailer" src="https://www.youtube.com/embed/GSycMV-_Csw"></iframe>
+    </div>
 </body>
 </html>
