--- a/SP2025-Assignment1-jryan/wwwroot/index.html
+++ b/SP2025-Assignment1-jryan/wwwroot/index.html
@@ -1,15 +1,69 @@
 ﻿<!DOCTYPE html>
-<html>
+<html >
 <head>
     <meta charset="utf-8" 
     <title></title>
+    <style type="text/css">
+        #Body{
+            background-color:black;
+        }
+
+        #firstSection{
+            text-align:center;
+            background-color:black;
+            color: white;
+        }
+
+        #Title{
+            font-size:80px;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        
+        #CoverArt{
+            border-radius:50%;
+            width:300px;
+            height:380px;
+        }
+
+        #Rating{
+            font-size:35px;
+        }
+
+        #Trailer{
+            height:400px;
+            width:800px;
+        }
+
+        #Page{
+            font-size:120%;
+        }
+
+        #Summary{
+            font-size:110%;
+        }
+
+        #Actors{
+
+        }
+    </style>
 </head>
-<body>
-    <div>
+<body id="Body">
+    <div id="firstSection">
         <h1 id="Title">Reacher</h1>
-        <img id="CoverArt" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FM%2FMV5BYjM1OWI2NmMtOTE4MC00M2ZkLWI2MWYtMTIzZjE3OTBjOThlXkEyXkFqcGdeQXVyMDc5ODIzMw%40%40._V1_FMjpg_UX1000_.jpg&f=1&nofb=1&ipt=4178e61c51f40b1402b859d7af0764f812673e9da782b706219477bdde25b511&ipo=images" width="200" height="250"/>
+        <img id="CoverArt" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.justwatch.com%2Fposter%2F309381402%2Fs718%2Fsezon-2.jpg&f=1&nofb=1&ipt=3260647ce5ed3f9d61366296ca8f19a22b4464ed3e405f502ad93321290a884d&ipo=images"/>
         <h5 id="Rating">8.0/10 IMDB Rating</h5>
         <iframe id="Trailer" src="https://www.youtube.com/embed/GSycMV-_Csw"></iframe>
+        <br />
+        <a id="Page" href="https://www.imdb.com/title/tt9288030/"><br />IMDB Page</a>
+        <p id="Summary">Itinerant former military policeman Jack Reacher solves crimes and metes out his own brand of street justice.<br />Based on the novels by Lee Child.</p>
+        <ul id="Actors">
+            •
+            <a href="https://www.imdb.com/name/nm2024927/?ref_=ttfc_fc_cl_t1">Alan Ritchson</a> •
+            <a href="https://www.imdb.com/name/nm3080233/?ref_=ttfc_fc_cl_t2">Maria Sten</a> •
+            <a href="https://www.imdb.com/name/nm0329511/?ref_=ttfc_fc_cl_t3">Malcolm Goodwin</a> •
+            <a href="https://www.imdb.com/name/nm2560618/?ref_=ttfc_fc_cl_t4">Willa Fitzgerald</a> •
+            <a href="https://www.imdb.com/name/nm0569226/?ref_=ttfc_fc_cl_t11">Bruce McGill</a> •
+        </ul>
     </div>
 </body>
 </html>
