--- a/SP2025-Assignment1-jryan/wwwroot/index.html
+++ b/SP2025-Assignment1-jryan/wwwroot/index.html
@@ -8,15 +8,15 @@
             background-color:black;
         }
 
-        #firstSection{
-            text-align:center;
-            background-color:black;
+        #firstSection {
+            text-align: center;
+            background-color: black;
             color: white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         #Title{
             font-size:80px;
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         
         #CoverArt{
